# machX_hardware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: Executables.cmake
include/: CMakeLists.txt  camera_client_node.h  camera_server_node.h
scripts/: fan_control_node.py  led_control_node.py  motor_control_node.py  ultrasonic_sesnsor_node.py
scripts/utils/: utils.py
src/: CMakeLists.txt  camera_client_node.cpp  camera_server_node.cpp
